create new website

--- a/src/index.css
+++ b/src/index.css
@@ -19,16 +19,14 @@ a {
   box-sizing: border-box;
 }
 
-.containerer {
-  display: grid;
-  grid-template-columns: minmax(16px, 1fr), repeat(10, minmax(10px, 1fr)),
-    minmax(16px, 1fr);
-}
-
 .grid-container {
   display: grid;
   grid-template-columns:
     minmax(1rem, 1fr)
     minmax(1rem, 1024px)
     minmax(1rem, 1fr);
+}
+
+.container {
+  grid-column: 2/3;
 }
