just completing the styling

--- a/src/Component/About.css
+++ b/src/Component/About.css
@@ -1,6 +1,6 @@
 .main-about {
   display: flex;
-  padding: 30px;
+  padding: 10rem 0;
   gap: 90px;
   justify-content: center;
   color: rgb(58, 54, 54);
