--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -1,5 +1,6 @@
 .main-footer {
-  padding: 150px 0;
+  padding: 180px 0 50px 0;
+  justify-content: space-between;
 }
 .main-footer h1 {
   font-size: 1.3rem;
@@ -7,9 +8,18 @@
   padding-bottom: 0.1rem;
   color: rgb(6, 156, 84);
 }
+.main-footer h2 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  margin-top: auto;
+}
 .main-footer p {
-  padding: 0.0001rem 0;
-  font-size: 0.8rem;
+  font-size: 14px;
+  color: rgb(78, 76, 76);
+}
+.main-footer p:hover {
+  cursor: pointer;
+  color: black;
 }
 .list ul {
   display: flex;
@@ -23,9 +33,18 @@
   transition: 0.3s;
 }
 .footer-lines {
-  padding: 0.2rem 4.5rem;
+  padding: 5px 4rem;
 }
-.list-in ul {
+.footer-info {
   display: flex;
-  gap: 2rem;
+  justify-content: space-evenly;
+}
+.footer-links {
+  display: flex;
+  gap: 7.7rem;
+}
+.copyright {
+  color: rgb(97, 95, 95);
+  align-items: center;
+  font-size: 12px;
 }
