--- a/src/Component/Header.css
+++ b/src/Component/Header.css
@@ -2,13 +2,14 @@
   border-bottom: 1px solid rgb(201, 191, 191);
   position: sticky;
   top: 0;
-  background-color: white;
+  background-color: var(--primary-color);
   width: 100vw;
   z-index: 10;
 }
 .header-line h1 {
   font-size: 20px;
   font-weight: 300;
+  color: var(--secondary-color);
 }
 .header-line h1:hover {
   color: rgb(87, 177, 87);
@@ -24,8 +25,17 @@
 .header-list ul {
   list-style: none;
   display: flex;
-  gap: 2.5rem;
+  gap: 2rem;
+  color: var(--secondary-color);
+  font-weight: 500;
 }
 .header-icon:hover {
+  cursor: pointer;
+}
+.h-button {
+  background-color: white;
+  border: none;
+}
+.h-button:hover {
   cursor: pointer;
 }
