--- a/src/Component/Offering.css
+++ b/src/Component/Offering.css
@@ -20,7 +20,10 @@
   display: flex;
   text-align: center;
   font-size: 1rem;
+
+  color: rgb(73, 71, 71);
 }
+
 .h1 {
   font-weight: 600;
   font-size: 1.2rem;
