--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,19 @@ a {
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: #ffffff;
+  --secondary-color: #2b2929;
+}
+.dark-theme {
+  --primary-color: #000106;
+  --secondary-color: #fff;
+}
+
+#moon-icon {
+  cursor: pointer;
+}
+
 .grid-container {
   display: grid;
   grid-template-columns:
