--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -17,23 +17,14 @@
   font-size: 14px;
   color: rgb(78, 76, 76);
 }
-.main-footer p:hover {
-  cursor: pointer;
-  color: black;
-  padding: 0.0001rem 0;
-  font-size: 1rem;
-}
+
 .list ul {
   display: flex;
   list-style: none;
   gap: 1rem;
   padding-left: 4.56rem;
 }
-.list li:hover {
-  cursor: pointer;
-  transform: scale(1.2);
-  transition: 0.3s;
-}
+
 .footer-lines {
   padding: 5px 4rem;
 }
@@ -67,9 +58,16 @@
 .services-needs:hover {
   cursor: pointer;
 }
-.copyright {
-  text-align: center;
-  color: rgb(146, 146, 146);
-  font-size: 0.002rem;
-  font-weight: 300;
+
+.footer-h2 {
+  color: rgb(6, 156, 84);
+}
+.footer-h2 p {
+  color: gray;
+}
+.footer-h2 p:hover {
+  color: rgb(0, 0, 0);
+  transform: scale(1.01);
+  cursor: pointer;
+  transition: 0.3s;
 }
