--- a/src/Component/Footer.css
+++ b/src/Component/Footer.css
@@ -40,6 +40,11 @@
 .list-in ul {
   gap: 2rem;
 }
+.list ul li:hover {
+  cursor: pointer;
+  transform: scale(1.2);
+  transition: 0.5s;
+}
 .service-list {
   list-style: none;
 }
